--- a/index.html
+++ b/index.html
@@ -6,9 +6,30 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>My favorite things</title>
   </head>
   <body>
-    
+    <div class="container">
+      <h1>My favorite things</h1>
+      <form id="favorites">
+        <div class="form-group">
+          <label for="food">Favorite food?</label>
+          <input type="text" class="form-control" id="food" placeholder="Enter a food">
+        </div>
+        <div class="form-group">
+          <label for="movie">Favorite movie?</label>
+          <input type="text" class="form-control" id="movie" placeholder="Enter a movie">
+        </div>
+        <div class="form-group">
+          <label for="game">Favorite game?</label>
+          <input type="text" class="form-control" id="game" placeholder="Enter a game">
+        </div>
+        <div class="form-group">
+          <label for="team">Favorite team?</label>
+          <input type="text" class="form-control" id="team" placeholder="Enter a team">
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
