--- a/index.html
+++ b/index.html
@@ -14,22 +14,28 @@
       <form id="favorites">
         <div class="form-group">
           <label for="food">Favorite food?</label>
-          <input type="text" class="form-control" id="food" placeholder="Enter a food">
+          <input type="text" class="form-control" id="food" placeholder="Enter a food" value="Taco">
         </div>
         <div class="form-group">
           <label for="movie">Favorite movie?</label>
-          <input type="text" class="form-control" id="movie" placeholder="Enter a movie">
+          <input type="text" class="form-control" id="movie" placeholder="Enter a movie" value="The Right Stuff">
         </div>
         <div class="form-group">
           <label for="game">Favorite game?</label>
-          <input type="text" class="form-control" id="game" placeholder="Enter a game">
+          <input type="text" class="form-control" id="game" placeholder="Enter a game" value="Cuphead">
         </div>
         <div class="form-group">
           <label for="team">Favorite team?</label>
-          <input type="text" class="form-control" id="team" placeholder="Enter a team">
+          <input type="text" class="form-control" id="team" placeholder="Enter a team" value="Pickles">
         </div>
         <button type="submit" class="btn btn-success">Submit</button>
       </form>
+      <div class="panel panel-default">
+        <p>Your favorites:</p>
+        <ul id="favorite-list">
+        </ul>
+      </div>
+      </ul>
     </div>
   </body>
 </html>
