add ice cream looping function & click function

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         <ul id="favorite-list">
         </ul>
       </div>
+      <h4>Ice cream list</h4>
+      <ul id="loopingList">
       </ul>
+        <button type="button" class="btn btn-success" id="iceCream">See Ice Creams</button>
     </div>
   </body>
 </html>
